--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,9 @@
         background-color: transparent;
         opacity: 0.5;
     }
-    div.main3{
+    /*div.main3{
         text-align: right;
-    }
+    }*/
     .button1 {
         border-radius: 12px;
         background-color: #41a3bbc4;
@@ -82,9 +82,9 @@
         <br>
         </form>
     </div>
-    <div class='main3'>
+    <!--div class='main3'-->
         <button class='button1'><span>Check tweet</span></button>
-    </div>
+    <!--/div-->
 </div>
 
 <div class="split right">
