--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,6 @@
         background-color: transparent;
         opacity: 0.5;
     }
-    /*div.main3{
-        text-align: right;
-    }*/
     .button1 {
         border-radius: 12px;
         background-color: #41a3bbc4;
@@ -82,9 +79,7 @@
         <br>
         </form>
     </div>
-    <!--div class='main3'-->
-        <button class='button1'><span>Check tweet</span></button>
-    <!--/div-->
+        <button class='button1' style="float: right;"><span>Check tweet</span></button>
 </div>
 
 <div class="split right">
