--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,9 @@
         cursor: pointer;
         margin: 5px;
     }
-    .button:hover {background-color: #3e8e41}
-    .button:active {
-         background-color: #3e8e41;
+    .button1:hover {background-color: #3e8e83;  }
+    .button1:active {
+         background-color: #3e8e83;
         box-shadow: 0 5px #666;
          transform: translateY(4px);
          }
@@ -79,7 +79,7 @@
         <br>
         </form>
     </div>
-        <button class='button1' style="float: right;"><span>Check tweet</span></button>
+	<button class='button1'><span>Check tweet</span></button>
 </div>
 
 <div class="split right">
